# freecad-stubs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  changelog.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
freecad_stubs/: Assembly.pyi  Cam.pyi  DraftUtils.pyi  Drawing.pyi  DrawingGui.pyi  Fem.pyi  FemGui.pyi  FreeCADTemplates.py  FreeCADTypes.py  ImageGui.pyi  Import.pyi  ImportGui.pyi  Measure.pyi  Mesh.pyi  MeshGui.pyi  MeshPart.pyi  Part.pyi  PartDesign.pyi  Path.pyi  PathGui.pyi  Points.pyi  QtUnitGui.pyi  Raytracing.pyi  RaytracingGui.pyi  ReverseEngineering.pyi  Robot.pyi  Sandbox.pyi  Sketcher.pyi  Spreadsheet.pyi  SpreadsheetGui.pyi  TechDraw.pyi  TechDrawGui.pyi  Test.pyi  Web.pyi  WebGui.pyi
freecad_stubs/Assembly-stubs/: __init__.pyi
freecad_stubs/Cam-stubs/: __init__.pyi
freecad_stubs/DraftUtils-stubs/: __init__.pyi
freecad_stubs/Drawing-stubs/: __init__.pyi
freecad_stubs/DrawingGui-stubs/: __init__.pyi
freecad_stubs/Fem-stubs/: __init__.pyi
freecad_stubs/FemGui-stubs/: __init__.pyi
freecad_stubs/FreeCAD/: Base.pyi  Console.pyi  UnitsApiPy.pyi  __Translate__.pyi  __init__.pyi
freecad_stubs/FreeCAD-stubs/: Base.pyi  Console.pyi  Qt.pyi  Units.pyi  UnitsApiPy.pyi  _Console.pyi  _Qt.pyi  _Units.pyi  __init__.pyi
freecad_stubs/FreeCADDbg-stubs/: __init__.pyi
freecad_stubs/FreeCADGui/: Selection.pyi  TaskDialogPython.pyi  __init__.pyi
freecad_stubs/FreeCADGui-stubs/: PySideUic.pyi  Selection.pyi  TaskDialogPython.pyi  _Selection.pyi  __init__.pyi
freecad_stubs/FreeCADTemplates/: __init__.py  qt_types.py  qt_types.pyi  templates.py  type_consts.py
freecad_stubs/FreeCADTypes/: __init__.py
freecad_stubs/ImageGui-stubs/: __init__.pyi
freecad_stubs/Import-stubs/: __init__.pyi
freecad_stubs/ImportGui-stubs/: __init__.pyi
freecad_stubs/JtReader-stubs/: __init__.pyi
freecad_stubs/Material-stubs/: __init__.pyi
freecad_stubs/Materials-stubs/: __init__.pyi
freecad_stubs/Measure-stubs/: __init__.pyi
freecad_stubs/Mesh-stubs/: __init__.pyi
freecad_stubs/MeshGui-stubs/: __init__.pyi
freecad_stubs/MeshPart-stubs/: __init__.pyi
freecad_stubs/Part-stubs/: BRepFeat.pyi  ChFi2d.pyi  Geom2d.pyi  GeomPlate.pyi  ShapeFix.pyi  ShapeUpgrade.pyi  __init__.pyi
freecad_stubs/PartDesign-stubs/: __init__.pyi
freecad_stubs/PartDesignGui-stubs/: __init__.pyi
freecad_stubs/Path-stubs/: Voronoi.pyi  __init__.pyi
freecad_stubs/PathApp-stubs/: __init__.pyi
freecad_stubs/PathGui-stubs/: __init__.pyi
freecad_stubs/Points-stubs/: __init__.pyi
freecad_stubs/Raytracing-stubs/: __init__.pyi
freecad_stubs/RaytracingGui-stubs/: __init__.pyi
freecad_stubs/ReverseEngineering-stubs/: __init__.pyi
freecad_stubs/Robot-stubs/: __init__.pyi
freecad_stubs/Sandbox-stubs/: __init__.pyi
freecad_stubs/SandboxGui-stubs/: __init__.pyi
freecad_stubs/ShapeFix-stubs/: __init__.pyi
freecad_stubs/Sketcher-stubs/: __init__.pyi
freecad_stubs/SketcherGui-stubs/: __init__.pyi
freecad_stubs/Spreadsheet-stubs/: __init__.pyi
freecad_stubs/SpreadsheetGui-stubs/: __init__.pyi
freecad_stubs/Surface-stubs/: __init__.pyi
freecad_stubs/TechDraw-stubs/: __init__.pyi
freecad_stubs/TechDrawGui-stubs/: __init__.pyi
freecad_stubs/Web-stubs/: __init__.pyi
freecad_stubs/WebGui-stubs/: __init__.pyi
freecad_stubs/_PartDesign-stubs/: __init__.pyi
lib/freecad_stub_gen/: __init__.py  __main__.py  config.py  debug_functions.py  decorators.py  decorators.pyi  file_functions.py  generate.py  importable_map.py  logger.py  module_container.py  module_map.py  module_namespace.py  ordered_set.py  stub_container.py  util.py
lib/freecad_stub_gen/FreeCADTemplates/: __init__.py  qt_types.py  qt_types.pyi  templates.py  type_consts.py
lib/freecad_stub_gen/additional/: FreeCADTemplates.py  FreeCADTypes.py
lib/freecad_stub_gen/cpp_code/: block.py  converters.py  generate_xml_files.py  preprocess_macro.py
lib/freecad_stub_gen/cpp_code/macro/: __main__.py  cache.py  file_preparation.py  pickle_fixer.py  preprocessor.py  run.py
lib/freecad_stub_gen/generators/: base.py  freecad_stub.py  from_methods.py  from_xml.py  names.py  property.py  types_enum.py
lib/freecad_stub_gen/generators/common/: annotation_parameter.py  arg_suit_merger.py  arguments_converter.py  context.py  cpp_function.py  doc_string.py  gen_base.py  gen_method.py  gen_python_api.py  names.py  py_build_converter.py  return_type_converter.py  signature_merger.py  types_converter.py
lib/freecad_stub_gen/generators/common/arguments_converter/: definitions.py  function_conv.py  sequence_stack.py  types_converter.py
lib/freecad_stub_gen/generators/common/gen_property/: gen_base.py  gen_dynamic.py  property_type.py
lib/freecad_stub_gen/generators/common/return_type_converter/: arg_types.py  base.py  full.py  (+4 more)
lib/freecad_stub_gen/generators/exceptions/: container.py  gen.py
lib/freecad_stub_gen/generators/from_cpp/: base.py  functions.py  klass.py  module.py
lib/freecad_stub_gen/generators/from_xml/: base.py  dynamic_property.py  full.py  method.py  static_property.py
lib/freecad_stub_gen/generators/method/: arg_suit_merger.py  doc_string.py  format_finder.py  function_finder.py  method.py  types_converter.py
lib/freecad_stub_gen/python_code/: __init__.py  module_container.py
lib/stub_gen/: decorators.py  decorators.pyi
lib/stub_gen/macro/: __main__.py  build_meta.py  generate_intermediate.py  run_makefile_for_intermediate.py
lib/stub_gen/scan/: __main__.py  _makefile.py  compile_commands.py  filter_gen.py  function.py  python_structs.py  tu_storage.py  utils.py  walk.py  wrapper.py
stub_target/: Draft.pyi  Image.pyi  Import.pyi  Mesh.pyi  MeshPart.pyi  Part.pyi  PartDesign.pyi  Path.pyi  ReverseEngineering.pyi  Sketcher.pyi  Spreadsheet.pyi  TechDraw.pyi  Test.pyi  Web.pyi
stub_target/FreeCAD/: Console.pyi  Translate.pyi  UnitsApiPy.pyi  __init__.pyi
stub_target/FreeCADGui/: Selection.pyi  __init__.pyi
tests/: test_parse_expression.py  test_py_build_converter.py
tests_stub_gen/: conftest.py  test_method.py  test_return.py
(+5 files in other folders)
