[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'freecad-stubs'
version = '1.0.14'
description = "Python stubs for FreeCAD"
readme = 'README.md'
requires-python = '>=3.6'
license = { text = 'GPL-3.0' }
authors = [{ name = 'ostr00000' }]
keywords = ['FreeCAD', 'stubs']
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Typing :: Stubs Only',
]
urls = { repository = 'https://github.com/ostr00000/freecad-stubs' }
dependencies = [
    'qtpy',
    # 'pivy', # cannot install it in a normal way, should be installed by FreeCAD anyway
]

[project.optional-dependencies]
generate = ['more-itertools']

[tool.setuptools]
package-dir = { '' = 'freecad_stubs' }

[tool.setuptools.package-data]
'*' = ['**/*.pyi']

[tool.mypy]
files = './lib'
warn_unused_configs = true
check_untyped_defs = true
warn_unused_ignores = true


[[tool.mypy.overrides]]
# This is stub directory, so we allow here an empty body
module = 'freecad_stub_gen.additional.*'
disable_error_code = ['empty-body']

[[tool.mypy.overrides]]
# mypy problem: https://github.com/python/mypy/issues/5382
module = 'freecad_stub_gen.generators.common.signature_merger'
disable_error_code = ['arg-type']

[[tool.mypy.overrides]]
# mypy problem: https://github.com/python/mypy/issues/12534
module = 'freecad_stub_gen.module_namespace'
disable_error_code = ['return-value', 'return']

[[tool.mypy.overrides]]
# mypy problem: https://github.com/python/mypy/issues/6799
module = 'freecad_stub_gen.generators.common.gen_property.gen_dynamic'
disable_error_code = ['misc']

[[tool.mypy.overrides]]
# Mypy do not allow variable annotation for `Enum`
module = 'freecad_stub_gen.generators.common.gen_property.property_type'
disable_error_code = ['misc']

